ML and comparator screen - alignment fix

--- a/src/app/experiment/experiment.component.css
+++ b/src/app/experiment/experiment.component.css
@@ -51,7 +51,7 @@ input {
 .tab {
   float: left;
   border: 1px solid #ccc;
-  height: 300px;
+  height: 250px;
   width: 10%;
   margin-left: 5px;
   box-shadow: 2px 0 8px #96968c38;
@@ -117,7 +117,7 @@ td{
   border: 1px solid #ccc;
   width: 88%;
   border-left: none;
-  height: 300px;
+  height: 250px;
   overflow: auto;
   box-shadow: 0 0 8px #96968c38;
   margin-left: 8px;
